--- a/index.css
+++ b/index.css
@@ -222,13 +222,13 @@ h2 {
 }
 .gridbio {
     grid-template-columns: 100%;
-    grid-template-rows: auto;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 
 } 
 
 .b1 {
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 1;
 }
 .f1 {
     grid-column: 1;
@@ -236,7 +236,7 @@ h2 {
 }
 .b2 {
     grid-column: 1;
-    grid-row: 4;
+    grid-row: 3;
 }
 .f2 {
     grid-column: 1;
