--- a/index.css
+++ b/index.css
@@ -268,7 +268,7 @@ h2 {
 }
 }
  /*PARA CELULAR Y TABLET*/
-/*@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
 
 nav ul{ 
     list-style: none;
@@ -353,5 +353,4 @@ h2 {
     grid-column: 1;
     grid-row: 10;
 }
-
 }
