--- a/index.css
+++ b/index.css
@@ -153,6 +153,7 @@ p{
         border: 1px solid #ddd;
         border-radius: 4px;
         padding: 5px;
+        height: 150px;
         vertical-align: middle;
 }
 .gridbio p{
